# NFT-Unlocked-Liquidity

./: .gitignore
version1/: burn-token.sh  cabal.project  claimDonation-fixed.sh  claimDonation.sh  claimWithoutToken-fixed.sh  claimWithoutToken.sh  donate-fixed.sh  donate.sh  env.sh  mint-token-fixed.sh  mint-token.sh  queryAddress.sh  send.sh  send4UTXO.sh  send6UTXO.sh  sendTokens-fixed.sh  sendTokens.sh  sendUTXO.sh  tx.body  tx.signed  version1.cabal
version1/app/: token-name.hs  token-policy.hs
version1/src/: Test_Contract1.hs  Test_Token.hs  Utils.hs
version1/testnet/: checkToken.script  testToken.nameHex  testToken.policy  tx.body  tx.signed  tx.unsigned
version2/: cabal.project  hie.yaml  ideas.txt  version2.cabal
version2/app/: checkToken-script.hs
version2/src/: Contract.hs  Test_Contract2.hs  Test_Token2.hs  Utils.hs
